--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Food for thought</title>
 </head>
 <body>
-   <div class="container">
+    <div class="container">
     <h1 class="mb-4">Blog Articles</h1>
     <a href="/articles/new" class="btn btn-success">New Article</a>
 
@@ -21,13 +23,16 @@
                 </div>
                 <div class="card-text mb-2"><%= article.description %></div>
                 <a href="articles/<%= article.slug %>" class="btn btn-primary">Read More</a>
+                <a href="articles/edit/<%= article.id %>" class="btn btn-info">Edit</a>
                 <form action="/articles/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
+                <button onclick="Toggle()" id="hrt" class="btn"><i class="fa-regular fa-heart"></i></button>
             </div>
            
         </div>
         <%}) %>
    </div>
+   <script>"js/main.js"</script>
 </body>
 </html>
