--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -21,7 +21,7 @@
     </div>
     <div>
         <!-- created a form that takes in the comments sumbitted on the page -->
-        <form action="/articles" method="POST">
+        <form action="/articles/<%= article.id %>/comment" method="POST">
             <input type="text" placeholder="Comment..." name="commentary">
             <input type="submit" value="Comment">
         </form>
